<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/num_people_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/num_people_question" />

                <EditText
                    android:id="@+id/num_people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:maxLength="2"
                    android:inputType="number" />
            </LinearLayout>

            <TextView
                android:id="@+id/num_people_hint"
                style="@style/hintStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_people_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/num_speakers_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/num_speakers_question" />

                <EditText
                    android:id="@+id/num_speakers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:maxLength="2"
                    android:inputType="number" />
            </LinearLayout>

            <TextView
                android:id="@+id/num_speakers_hint"
                style="@style/hintStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_speakers_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/num_guests_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/num_guests_question" />

                <EditText
                    android:id="@+id/num_guests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:maxLength="2"
                    android:inputType="number" />
            </LinearLayout>

            <TextView
                android:id="@+id/num_guests_hint"
                style="@style/hintStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_guests_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/num_layabouts_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/num_layabouts_question" />

                <EditText
                    android:id="@+id/num_layabouts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:maxLength="2"
                    android:inputType="number" />
            </LinearLayout>

            <TextView
                android:id="@+id/num_layabouts_hint"
                style="@style/hintStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_layabouts_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/bill_amount_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/bill_amount_question" />

                <EditText
                    android:id="@+id/bill_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:maxLength="6"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <TextView
                android:id="@+id/bill_amount_hint"
                style="@style/hintStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill_amount_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tip_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/tip_question" />

                <ToggleButton
                    android:id="@+id/tip_included"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="No"
                    android:textOn="Yes" />
            </LinearLayout>

            <TextView
                android:id="@+id/tip_hint"
                style="@style/hintStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/service_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_question" />

            <RadioGroup
                android:id="@+id/service_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/service_fine"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/service_wonderful"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_wonderful"
                    android:textSize="12sp" >
                </RadioButton>

                <RadioButton
                    android:id="@id/service_fine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_fine"
                    android:textSize="12sp" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/service_crap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_crap"
                    android:textSize="12sp" >
                </RadioButton>
            </RadioGroup>

            <TextView
                android:id="@+id/service_hint"
                style="@style/hintStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_hint" />
        </LinearLayout>

        <Button
            android:id="@+id/go_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="calculateWhatToPay"
            android:text="@string/go_button" />
    </LinearLayout>

</ScrollView>